# claude-sdd-toolkit

./: .gitignore  .model-chorusrc  AGENT.md  ANALYSIS_RICH_USAGE.md  ARCHITECTURE.md  BIKE_LANE.md  CHANGELOG.md  DESIGN_UI_PROTOCOL_MAPPING.md  DEVELOPER.md  FIDELITY_REVIEW_phase-3.md  FIDELITY_REVIEW_task-1-1.md  FIDELITY_REVIEW_task-2-phase-2.md  FINDINGS.md  INSTALLATION.md  NEXT_STEPS.md  PHASE_1_FIDELITY_REVIEW.md  PLAN_AUDIT.md  PLAN_CONSOLIDATE_AI_CALLS.md  PLAN_FIX.md  PLAN_SKILLS.md  PLAN_TEST_FORMAT_OUTPUT.md  PLAN_VERBOSITY.md  PLUGIN_INSTALL.md  PR.md  PROPOSAL.md  PRResearch.md  README.md  SDD_RENDER_BUG.md  SKILL_REVIEW_INSTRUCTIONS.md  TCOMPACT.md  TEST_REDUNDANCY_RESEARCH.md  TEST_RESULTS.md  TODO.md  ab_test_comparison.md  control_output.md  ff20b317-4ca6-4d9b-8ef9-bfaf79d866a1.jsonl  modifications-backward-compat.json  modifications-verify-delete.json  pytest.ini  task-1-2-progress-report.md  (+6 more)
src/claude_skills/: GETTING_STARTED.md  MIGRATION_GUIDE.md  README.md  pyproject.toml
src/claude_skills/.claude/: ai_config.yaml
src/claude_skills/claude_skills/: __init__.py  documentation-schema.json
src/claude_skills/claude_skills/cli/: provider_runner.py
src/claude_skills/claude_skills/code_doc/: ai_consultation.py  ast_analysis.py  cli.py  detectors.py  formatter.py  generator.py  schema.py
src/claude_skills/claude_skills/common/: README.md  __init__.py  ai_config.py  ai_config_setup.py  ai_tools.py  cli_utils.py  contracts.py  doc_helper.py  doc_integration.py  git_config.py  git_metadata.py  hierarchy_validation.py  integrations.py  json_output.py  metrics.py  paths.py  plain_ui.py  printer.py  progress.py  query_operations.py  rich_ui.py  sdd_config.py  setup_templates.py  spec.py  tui_progress.py  ui_factory.py  validation.py
src/claude_skills/claude_skills/context_tracker/: cli.py  parser.py  process_utils.py
src/claude_skills/claude_skills/sdd_pr/: cli.py  (+2 more)
src/claude_skills/schemas/: sdd-spec-schema.json
src/claude_skills/specs/: git-agent-file-staging-2025-11-03-001.json
(+535 files in other folders)
